--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "lodash": "^4.17.21",
+    "wari": "^1.4.3",
     "yaml": "^2.6.1",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.5"
@@ -52,8 +54,10 @@
   },
   "devDependencies": {
     "@total-typescript/tsconfig": "^1.0.4",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^22.9.3",
     "prettier": "^3.3.3",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
 }
