--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aifn",
-  "version": "1.0.0",
+  "version": "2.0.0-alpha.0",
   "description": "Create functions using AI LLMs.",
   "type": "module",
   "main": "dist/index.js",
